# tool-search-oss

./: .gitignore  LICENSE  README.md  package.json
python/: pyproject.toml
python/benchmarks/: bench_2000_results.md  bench_2000_tools.py  bench_all.py  bench_ide_en.py  bench_ide_en_results.md  bench_ide_results.md  bench_ide_simulation.py  bench_ttft_real.py  benchmark_results.md  generate_mock_tools.py  ttft_real_results.md
python/examples/: tools.json
python/tests/: test_router.py
python/tool_search_oss/: __init__.py  router.py  server.py
src/: renderer.ts  search.ts  server.ts  test.ts
